# telegram-agent-router

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: pages.yml
UnityVisual/: README.md
UnityVisual/Assets/Editor/TelegramOffice/: CreateTelegramOfficeScene.cs  KenneyTextureImporter.cs  TelegramOfficeAutoSetup.cs
UnityVisual/Assets/Scenes/: TelegramOffice.unity
UnityVisual/Assets/Scripts/TelegramOffice/: AgentCharacter.cs  KenneySpriteLibrary.cs  MessagePacket.cs  PixelPart.cs  PixelSpriteFactory.cs  RouterApiClient.cs  SceneStateModels.cs  TelegramOfficeScene.cs
UnityVisual/Assets/_Recovery/: 0.unity
UnityVisual/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
app/: __init__.py  agents.py  auth.py  main.py  router_protocol.py  settings.py  telegram_service.py
config/: agents.example.yaml
docs/: index.html
scripts/: login_telegram.py
tests/: test_router_protocol.py  test_routing_detection.py
