[project]
name = "telegram-agent-router"
version = "0.1.0"
description = "Telegram personal-account router for coordinating multiple bot conversations."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "telethon>=1.36.0",
    "pydantic-settings>=2.4.0",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0.2",
    "itsdangerous>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["."]
